added the approach for accessing the files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,10 @@ image: alpine:latest
 stages:
     - build
 
+before_script:
+    - apk update
+    - apk add zip
+
 build:
     stage: build
     script:
