--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,41 +10,41 @@ before_script:
 build:
     stage: build
     script:
-        - echo "hello:"
-        - ls jil/dev | head -n 1 ##latest files
-        - ls -lrt ##list all directory
-        - ls -l | wc -l ##list number of files
-        - ls jil/dev | wc -l ##list number of files in jil folder
-        - ls jil/dev ##list all files in the directory
-        - find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
-        - find jil/dev -name "*.jil" ##finds and list out the file with .jil extension
-        - find jil/prod -name "*.sh" | wc -l ##finds the file with .sh... if file not found with .sh extension then it will display as 0
-        - find jil/dev/* -iname "*.jil" -mtime -1 ## fetch the commited files for past 24hrs 
-        - find jil/dev/* -maxdepth 1 -mtime -1 ## fetch the commited files for past 24hrs
-        - find jil/dev/* -iname "*.jil" -mtime 1 ## fetch the commited files for exactly 1day
-        - FILES=$(find jil/dev -name "*.jil" | wc -l) ##storing the values in variable 
-        - echo "There are $FILES in dev env." 
+        ##- echo "hello:"
+        ##- ls jil/dev | head -n 1 ##latest files
+        ##- ls -lrt ##list all directory
+        ##- ls -l | wc -l ##list number of files
+        ##- ls jil/dev | wc -l ##list number of files in jil folder
+        ##- ls jil/dev ##list all files in the directory
+        ##- find jil/dev -name "*.jil" | wc -l ##finding number of files with specific extension 
+        ##- find jil/dev -name "*.jil" ##finds and list out the file with .jil extension
+        ##- find jil/prod -name "*.sh" | wc -l ##finds the file with .sh... if file not found with .sh extension then it will display as 0
+        ##- find jil/dev/* -iname "*.jil" -mtime -1 ## fetch the commited files for past 24hrs 
+        ##- find jil/dev/* -maxdepth 1 -mtime -1 ## fetch the commited files for past 24hrs
+        ##- find jil/dev/* -iname "*.jil" -mtime 1 ## fetch the commited files for exactly 1day
+        ##- FILES=$(find jil/dev -name "*.jil" | wc -l) ##storing the values in variable 
+        ##- echo "There are $FILES in dev env." 
         
-        - |
-            if [ $FILES == 2 ]
-            then
-                echo "Sunday is the holiday"
-            else
-                echo "wrong cmd"
-            fi
+        ##- |
+            ##if [ $FILES == 2 ]
+            ##then
+                ##echo "Sunday is the holiday"
+            ##else
+                ##echo "wrong cmd"
+            ##fi
         
-        - | 
-            abc="sample1.jil"
-            for dirname in $(ls -d jil/dev/*)  ##listing all files and storing in variable by using for loop
-            do
-                echo "$dirname"
-                if cmp -s "$dirname" "jil/dev/$abc"; ##comparing files (should give the path for the file which has to be compared with)
-                then
-                    echo "file found"
-                else 
-                    echo "file not found"
-                fi
-            done
+        ##- | 
+            ##abc="sample1.jil"
+            ##for dirname in $(ls -d jil/dev/*)  ##listing all files and storing in variable by using for loop
+            ##do
+                ##echo "$dirname"
+                ##if cmp -s "$dirname" "jil/dev/$abc"; ##comparing files (should give the path for the file which has to be compared with)
+                ##then
+                    ##echo "file found"
+                ##else 
+                    ##echo "file not found"
+                ##fi
+            ##done
         
 ##        - | ## THIS METHOD IS TO FIND THE FILES BY COMPARING
             ##for dirname in $(cat raw.md)  ##read the file and store the values in variable by using for loop
@@ -68,7 +68,7 @@ build:
             ##done
         
         - | ##THIS METHOD IS TO FIND THE FILES WITHOUT COMPARING... USING "FIND" COMMAND
-            for dirname in $(cat raw.md) ##read the file and store the values in variable 
+            for dirname in $(cat raw.md)  
             do
                 var=$(find jil/dev -name $dirname)
                 zip -j arti.zip $var
