--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ before_script:
 build:
     stage: build
     script:
-        ##- echo "hello:"
+        - echo "hello:"
         ##- ls jil/dev | head -n 1 ##latest files
         ##- ls -lrt ##list all directory
         ##- ls -l | wc -l ##list number of files
