--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,17 +82,18 @@ build:
             do
                 zip -j arti.zip $file
             done
+            
+        - | ##ARRAY
+            env: "dev qa prod"
+            for array in $env
+            do  
+                echo "$array"
+            done
 
     artifacts:
         paths:
             - arti.zip
-ARRAY
-variable:
-    env: "dev qa prod"
-for array in $env
-do  
-    echo "$array"
-done
+
 
 USING FUNCTION IN GITLAB YAML FILE
 .build_fn: &build_fn |
